--- a/compute_instance/.compute_instance.gitlab-ci.yml
+++ b/compute_instance/.compute_instance.gitlab-ci.yml
@@ -56,3 +56,7 @@ destroy_compute_instance:
   script:
     - terraform destroy -auto-approve 
   when: manual
+
+include:
+  - project: 'morgot/kubernetes'
+    file: '.install-kubespray.gitlab-ci.yml'
