add version for local_file

--- a/compute_instance/.compute_instance.gitlab-ci.yml
+++ b/compute_instance/.compute_instance.gitlab-ci.yml
@@ -33,6 +33,7 @@ lint_compute_instance:
   rules:
     - changes:
         - $TF_compute_instance_dir/**
+  allow_failure: true
 
 plan_compute_instance:
   stage: plan
