--- a/compute_instance/.compute_instance.gitlab-ci.yml
+++ b/compute_instance/.compute_instance.gitlab-ci.yml
@@ -49,8 +49,11 @@ apply_compute_instance:
   extends: .prepare_tf_config_compute_instance
   script:
     - terraform apply -auto-approve tfplan
+    - pwd
+    - ls
   when: manual
   needs: [plan_compute_instance]
+
 
 destroy_compute_instance:
   stage: destroy
