--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -19,3 +19,5 @@ deploy_kubespray:
   script:
     - ansible-playbook -i inventory/mycluster/hosts.yaml cluster.yml -b
   when: manual
+  needs:
+    - apply_compute_instance
