--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -2,7 +2,7 @@ deploy_kubespray:
   stage: install k8s-cluster with kubespray
   extends: .prepare_kubespray
   variables:
-    ANSIBLE_CONFIG: "ansible.cfg"
+    ANSIBLE_CONFIG: "kubernetes/ansible.cfg"
   image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
   before_script:
     - cp compute_instance/hosts.yaml kubernetes/mycluster
