--- a/kubernetes/mycluster/group_vars/all/all.yml
+++ b/kubernetes/mycluster/group_vars/all/all.yml
@@ -2,6 +2,12 @@
 ## Directory where the binaries will be installed
 bin_dir: /usr/local/bin
 
+ansible_user: ubuntu
+ansible_ssh_private_key_file: /opt/kubespray/vm
+
+
+     
+
 ## The access_ip variable is used to define how other nodes should access
 ## the node.  This is used in flannel to allow other flannel nodes to see
 ## this node for example.  The access_ip is really useful AWS and Google
