--- a/kubernetes/mycluster/group_vars/k8s_cluster/addons.yml
+++ b/kubernetes/mycluster/group_vars/k8s_cluster/addons.yml
@@ -104,15 +104,15 @@ ingress_nginx_host_network: true
 # ingress_nginx_service_nodeport_https: 30081
 ingress_publish_status_address: ""
 # ingress_nginx_nodeselector:
-#   kubernetes.io/os: "linux"
+#   kubernetes.io/os: ""
 # ingress_nginx_tolerations:
 #   - key: "node-role.kubernetes.io/control-plane"
 #     operator: "Equal"
 #     value: ""
 #     effect: "NoSchedule"
-# ingress_nginx_namespace: "ingress-nginx"
-# ingress_nginx_insecure_port: 80
-# ingress_nginx_secure_port: 443
+ingress_nginx_namespace: "ingress-nginx"
+ingress_nginx_insecure_port: 80
+ingress_nginx_secure_port: 443
 # ingress_nginx_configmap:
 #   map-hash-bucket-size: "128"
 #   ssl-protocols: "TLSv1.2 TLSv1.3"
@@ -123,14 +123,14 @@ ingress_publish_status_address: ""
 # ingress_nginx_extra_args:
 #   - --default-ssl-certificate=default/foo-tls
 # ingress_nginx_termination_grace_period_seconds: 300
-# ingress_nginx_class: nginx
+ingress_nginx_class: nginx
 # ingress_nginx_without_class: true
 # ingress_nginx_default: false
-# ingress_nginx_nodeselector:
-#   node-role.kubernetes.io/ingress: ""
-# ingress_nginx_tolerations:
-#   - key: "node-role.kubernetes.io/ingress"
-#     operator: "Exists"
+ingress_nginx_nodeselector:
+  node-role.kubernetes.io/ingress: ""
+ingress_nginx_tolerations:
+  - key: "node-role.kubernetes.io/ingress"
+    operator: "Exists"
     
 
 # ALB ingress controller deployment
