--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -5,7 +5,7 @@ deploy_kubespray:
   image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
   before_script:
     - cp compute_instance/hosts.yaml kubernetes/mycluster
-    - cat compute_instance/k8s-cluster.yaml >> kubernetes/mycluster/group_vars/k8s_cluster/k8s-cluster.yml
+    - cat compute_instance/k8s-cluster.yaml | sed 's/$/\n/' | sed '/^$/d' >> kubernetes/mycluster/group_vars/k8s_cluster/k8s-cluster.yml
     - cd kubernetes
     - git clone https://github.com/kubernetes-sigs/kubespray.git 
     - cp -r mycluster kubespray/inventory
