--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -23,7 +23,13 @@ deploy_kubespray:
 
 scrape_kubeconfig:
   stage: install k8s-cluster with kubespray
+  image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
   before_script:
     - bash compute_instance/kubectl.sh
   script:
-   - kubectl get pod -A
+    - kubectl get pod -A
+  tags:
+    - docker
+  needs:
+    - apply_compute_instance
+    - deploy_kubespray
