--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -1,30 +1,32 @@
-deploy_kubespray:
-  stage: install k8s-cluster with kubespray
-  variables:
-    ANSIBLE_CONFIG: "kubernetes/ansible.cfg"
-  image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
-  before_script:
-    - cp compute_instance/hosts.yaml kubernetes/mycluster
-    - cat compute_instance/k8s-cluster.yaml | sed 's/$/\n/' | sed '/^$/d' >> kubernetes/mycluster/group_vars/k8s_cluster/k8s-cluster.yml
-    - cd kubernetes
-    - git clone https://github.com/kubernetes-sigs/kubespray.git 
-    - cp -r mycluster kubespray/inventory
-    - cd kubespray
-  script:
-    - cat inventory/mycluster/hosts.yaml
-    - cat inventory/mycluster/group_vars/k8s_cluster/addons.yml
-    - cat inventory/mycluster/group_vars/k8s_cluster/k8s-cluster.yml
-    - ansible-playbook -i inventory/mycluster/hosts.yaml cluster.yml -b
-  # when: manual
-  needs:
-    - apply_compute_instance
-  tags:
-    - docker
+# deploy_kubespray:
+#   stage: install k8s-cluster with kubespray
+#   variables:
+#     ANSIBLE_CONFIG: "kubernetes/ansible.cfg"
+#   image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
+#   before_script:
+#     - cp compute_instance/hosts.yaml kubernetes/mycluster
+#     - cat compute_instance/k8s-cluster.yaml | sed 's/$/\n/' | sed '/^$/d' >> kubernetes/mycluster/group_vars/k8s_cluster/k8s-cluster.yml
+#     - cd kubernetes
+#     - git clone https://github.com/kubernetes-sigs/kubespray.git 
+#     - cp -r mycluster kubespray/inventory
+#     - cd kubespray
+#   script:
+#     - cat inventory/mycluster/hosts.yaml
+#     - cat inventory/mycluster/group_vars/k8s_cluster/addons.yml
+#     - cat inventory/mycluster/group_vars/k8s_cluster/k8s-cluster.yml
+#     - ansible-playbook -i inventory/mycluster/hosts.yaml cluster.yml -b
+#   # when: manual
+#   needs:
+#     - apply_compute_instance
+#   tags:
+#     - docker
 
 scrape_kubeconfig:
   stage: install k8s-cluster with kubespray
   image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
   before_script:
+    - ls compute_instance/
+    - cat compute_instance/kubectl.sh
     - bash compute_instance/kubectl.sh
   script:
     - kubectl get pod -A
@@ -32,4 +34,3 @@ scrape_kubeconfig:
     - docker
   needs:
     - apply_compute_instance
-    - deploy_kubespray
