--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -25,6 +25,7 @@ scrape_kubeconfig:
   stage: install k8s-cluster with kubespray
   image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
   before_script:
+    - whoami
     - sed -i 's/\r$//' compute_instance/kubectl.sh
     - cat compute_instance/kubectl.sh
     - bash compute_instance/kubectl.sh
