--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -29,6 +29,7 @@ scrape_kubeconfig:
     - sed -i 's/\r$//' compute_instance/kubectl.sh
     - cat compute_instance/kubectl.sh
     - bash compute_instance/kubectl.sh
+    - export KUBECONFIG=~/.kube/config
     - kubectl config view
     - cat ~/.kube/config
   script:
