--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -25,18 +25,15 @@ scrape_kubeconfig:
   stage: install k8s-cluster with kubespray
   image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
   before_script:
-    - whoami
-    - sed -i 's/\r$//' compute_instance/kubectl.sh
-    - cat compute_instance/kubectl.sh
-    - bash compute_instance/kubectl.sh
-    - export KUBECONFIG=~/.kube/config
-    - kubectl config view
-    - cat ~/.kube/config
-    - kubectl config set-cluster cluster.local --server=https://10.0.1.29:6443
-    - kubectl config view
-    - cat ~/.kube/config
+    - export IP_CONTROL_PLANE=$(cat /compute_instance/ip_control_plane) 
+    - curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+    - chmod +x ./kubectl
+    - mv ./kubectl /usr/local/bin/kubectl
+    - mkdir -p ~/.kube
+    - ssh -o StrictHostKeyChecking=no -i $ssh_key ubuntu@$control_plane_ip 'sudo cat /etc/kubernetes/admin.conf' > ~/.kube/config
+    - kubectl config set-cluster cluster.local --server=https://$IP_CONTROL_PLANE:6443
   script:
-    - kubectl get pod -A
+    - kubectl get pod
   tags:
     - docker
   needs:
