--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -25,7 +25,7 @@ scrape_kubeconfig:
   stage: install k8s-cluster with kubespray
   image: cr.yandex/crpb6jem7gml01esa824/ansible-dind:0.1
   before_script:
-    - export IP_CONTROL_PLANE=$(cat compute_instance/ip_control_plane.cfg | xargs) 
+    - export IP_CONTROL_PLANE=$(cat compute_instance/ip_control_plane.cfg | xargs | sed 's/\r//g')
     - echo "$IP_CONTROL_PLANE" | cat -A
     - echo $IP_CONTROL_PLANE
     - curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
