--- a/kubernetes/.install-kubespray.gitlab-ci.yml
+++ b/kubernetes/.install-kubespray.gitlab-ci.yml
@@ -28,13 +28,13 @@ scrape_kubeconfig:
     - export IP_CONTROL_PLANE=$(cat compute_instance/ip_control_plane.cfg | xargs | sed 's/\r//g')
     - echo "$IP_CONTROL_PLANE" | cat -A
     - echo $IP_CONTROL_PLANE
+    - export KUBECONFIG=~/.kube/config
     - curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
     - chmod +x ./kubectl
     - mv ./kubectl /usr/local/bin/kubectl
     - mkdir -p ~/.kube
-    - ssh -o StrictHostKeyChecking=no -i /opt/kubespray/vm ubuntu@$IP_CONTROL_PLANE 'sudo cat /etc/kubernetes/admin.conf' > ~/.kube/config
+    - ssh -o StrictHostKeyChecking=no -i /opt/kubespray/vm ubuntu@$IP_CONTROL_PLANE 'sudo cat /etc/kubernetes/admin.conf' > $KUBECONFIG
     - kubectl config set-cluster cluster.local --server=https://$IP_CONTROL_PLANE:6443
-    - export KUBECONFIG=~/.kube/config
   script:
     - kubectl get pod
   tags:
