--- a/kubernetes/.prepare-k8s-.gitlab-ci.yml
+++ b/kubernetes/.prepare-k8s-.gitlab-ci.yml
@@ -19,8 +19,8 @@ install_monitoring:
     name: alpine/helm
     entrypoint: [""]
   extends: .prepare_kubectl
-  before_script:
-    - export KUBECONFIG=$KUBECONFIG
+  # before_script:
+  #   - export KUBECONFIG=$KUBECONFIG
   script:
     - helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
     - helm repo update
@@ -30,8 +30,6 @@ install_monitoring:
       else
         helm install kube-prometheus-stack prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace
       fi
-  needs:
-    - .prepare_kubectl
   tags:
     - docker
 
