--- a/kubernetes/.prepare-k8s-.gitlab-ci.yml
+++ b/kubernetes/.prepare-k8s-.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
     name: bitnami/kubectl
     entrypoint: [""]
   before_script:
-    - export KUBECONFIG=$(cat kubeconfig)
+    - export KUBECONFIG=./kubeconfig
   tags:
     - docker
   needs:
