--- a/kubernetes/.prepare-k8s-.gitlab-ci.yml
+++ b/kubernetes/.prepare-k8s-.gitlab-ci.yml
@@ -21,6 +21,8 @@ install_monitoring:
   before_script:
     - export KUBECONFIG=./kubeconfig
   script:
+    - cat ./kubeconfig
+    - kubectl config view
     - helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
     - helm repo update
     - |
